--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<script>
 	function changeOnUkr() {
 	document.getElementById('zagl').innerHTML = "Мій персональний <br>Оксфорд"
-	document.getElementById('pidzagl').innerHTML = "Наша ціль роаналізувати суспільство в якому ми проживаємо, <br>побачити наскільки воно інтелектуальне. Чи можемо ми в даному <br>,суспільстві самонавчатися чи для цього нам потрібен інший <br>вид суспільства? Проаналізувати себе та свій потенціал стосовно <br>самонавчання. Розробити свою програму самонавчання, яка буде <br>актуальна не тільки для нас, а й для іншого. Якими навичками <br>повинна володіти людина в тому числі і <br>якостями особистості, щоб вона могла самонавчатися?"
+	document.getElementById('pidzagl').innerHTML = "Наша ціль роаналізувати суспільство в якому ми проживаємо, побачити наскільки воно інтелектуальне. Чи можемо ми в даному ,суспільстві самонавчатися чи для цього нам потрібен інший вид суспільства? Проаналізувати себе та свій потенціал стосовно самонавчання. Розробити свою програму самонавчання, яка буде актуальна не тільки для нас, а й для іншого."
 	document.getElementById('begin').innerHTML = "Почати"
 
 	}
