--- a/learning.html
+++ b/learning.html
@@ -63,7 +63,7 @@
 function changeOnUkr() {
 document.getElementById('learning_heading').innerHTML = "Вчимося вчитися"
 document.getElementById('learning_text1').innerHTML = "'Вміння вчитися' - це можливість продовжувати та наполегливо розвивати навичку навчання для того, щоб організовувати чиєсь власне вивчення, в тому числі шляхом ефективного управління часом та інформацією, як індивідуально, так і в групах. Це вміння включає в собі обізнаність в чиємусь навчальному процесі та потребах, розпізнавання всіх нагод, щоб долати труднощі для того, щоб успішно вчитися. Це вміння означає здобуття, обробку та засвоєння нових знань і навичок, так само як пошук та використання настанов. Навчання вчитися закликає 'учнів' спиратися на попередні вміння та досвід для того, щоб використовувати і застосовувати знання та вміння в різних ситуаціях: вдома, на роботі, на навчанні чи тренуванні. Мотивація та спокій мають вирішальне значення для цього вміння."
-document.getElementById('learning_text2').innerHTML = "Підсумовуючи, кажуть, що для учня інтелектуальний розвиток тісно пов'язаний з власним життям, формальний - з роботою, а знання - з соціальною відповідальністю. Ці типи зв'язків не розвиваються самі по собі, коли об'єкт стає дорослим. Вони проявляються в навмисних зусиллях та постійних роздумах. Коли ви збираєтеся почати розвивати ці навички? Як ви будете це робити? Чому б не почати просто зараз?" 
+document.getElementById('learning_text2').innerHTML = "Підсумовуючи, кажуть, що для учня інтелектуальний розвиток тісно пов'язаний з власним життям, формальний - з роботою, а знання - з соціальною відповідальністю. Ці типи зв'язків не розвиваються самі по собі, коли об'єкт стає дорослим. Коли ви збираєтеся почати розвивати ці навички? Чому б не почати просто зараз?" 
 
 
 }
