--- a/my_program.html
+++ b/my_program.html
@@ -61,7 +61,7 @@
 						<p class="program_name_text" id="yura_heading1">JavaScript learning</p>
 					</div>
 					<div class="program_name wow slideInUp name2">
-						<p class="program_name_text" id="yura_heading2">Improving Wordpress skills</p>
+						<p class="program_name_text" id="yura_heading2">Improving WP skills</p>
 					</div>
 					<div class="program_item wow bounceInLeft program_item1">
 						<img src="img/periodic-table.png" alt="" class="item_ico">
@@ -208,7 +208,7 @@ document.getElementById('program_text3').innerHTML = "Think about this for a sec
 document.getElementById('program_text4').innerHTML = "Getting started on your life plan can be easy if you have the right tools." 
 
 document.getElementById('yura_heading1').innerHTML = "JavaScript learning"
-document.getElementById('yura_heading2').innerHTML = "Improving Wordpress skills"
+document.getElementById('yura_heading2').innerHTML = "Improving WP skills"
 document.getElementById('yura_text1').innerHTML = "2020-2021"
 document.getElementById('yura_text2').innerHTML = "Spring - Winter 2020"
 document.getElementById('yura_text3').innerHTML = "To get acquainted with all the main properties and rules of JS"
