--- a/future-world.html
+++ b/future-world.html
@@ -66,7 +66,7 @@ function changeOnUkr() {
 document.getElementById('fut_zagl').innerHTML = "Майбутній світ"
 document.getElementById('fut_text1').innerHTML = "Але при деяких обставинах - або на вимогу боргу, або в силу якоїсь необхідності часто доводиться забувати про насолоди і не втікати від тягарів. Дійсно, ніхто не відкидає, не зневажає, не уникає насолод тільки через те, що це насолоди, але лише через те, що тих, хто не вміє розумно вдаватися насолоді, осягають великі страждання."
 document.getElementById('fut_text2').innerHTML = "Так само, як немає нікого, хто полюбивши, вважав за краще і зажадав би саме страждання тільки за те, що це страждання, а не тому, що інший раз виникають такі обставини, коли страждання і біль приносять якусь і чималу насолоду. Вони винні так само, як і ті, хто через душевну слабкість, тобто через бажання."
-document.getElementById('fut_text3').innerHTML = "Якщо скористатися найпростішим прикладом, то хто з нас став би займатися якими б то не було тяжкими фізичними вправами, якщо б це не приносило з собою якоїсь користі? І хто міг би по справедливості дорікнути прагнення до насолоди, яке не несло б з собою ніяких неприємностей, або того, хто уникав би такого страждання, яке не приносило б з собою їх."
+document.getElementById('fut_text3').innerHTML = "Якщо скористатися найпростішим прикладом, то хто з нас став би займатися якими б то не було тяжкими фізичними вправами, якщо б це не приносило з собою якоїсь користі?"
 
 
 }
